Add states encryption, REST endpoints, main views and FE components

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ emmett-crypto = "^0.2.1"
 orjson = "^3.6.4"
 psycopg2-binary = "^2.9.1"
 httpx = "0.17.1"
+emmett-rest = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 
