--- a/charts/tfstater/templates/hooks/job-migrations.yaml
+++ b/charts/tfstater/templates/hooks/job-migrations.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "tfstater.labels" . | nindent 4 }}
   annotations:
-    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook: post-install,pre-upgrade
     helm.sh/hook-weight: "0"
     helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
 spec:
