--- a/charts/tfstater/templates/secret.yaml
+++ b/charts/tfstater/templates/secret.yaml
@@ -38,6 +38,7 @@ stringData:
       bucket: {{ $bucket.name }}
       {{- else }}
       endpoint: {{ $objStoreConfig.endpoint }}
+      bucket: {{ $objStoreConfig.bucket }}
       region: {{ $objStoreConfig.region }}
       access_key: {{ $objStoreConfig.access_key }}
       secret_key: {{ $objStoreConfig.secret_key }}
