--- a/charts/tfstater/templates/secret.yaml
+++ b/charts/tfstater/templates/secret.yaml
@@ -46,6 +46,14 @@ stringData:
       path_prefix: {{ $objStoreConfig.path_prefix | quote }}
       encrypt_data: {{ $objStoreConfig.encrypt_data }}
 
-    auth: {{ .Values.config.auth | toYaml | nindent 6 }}
+    {{ with .Values.config.auth -}}
+    auth: {{ . | toYaml | nindent 6 }}
+    {{- end }}
 
-    idp: {{ .Values.config.idp | toYaml | nindent 6 }}
+    {{ with .Values.config.smtp -}}
+    smtp: {{ . | toYaml | nindent 6 }}
+    {{- end }}
+
+    {{ with .Values.config.idp -}}
+    idp: {{ . | toYaml | nindent 6 }}
+    {{- end }}
